--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -16,39 +16,49 @@
         DataContext="{StaticResource MainVM}">
 
     <Grid>
-        <Border Background="#f5f7fb" 
-                CornerRadius="30">
+        <Border Background="#FFDFDFDF" 
+                CornerRadius="30" >
 
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="200"/>
                     <ColumnDefinition Width="4*"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid Grid.Column="0">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="0.3*"/>
-                        <RowDefinition Height="0.7*"/>
+                        <RowDefinition Height="200"/>
+                        <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
 
-                    <Border Grid.Row="0" Background="#3C5654" CornerRadius="30,30,0,0"></Border>
-                    <Border Grid.Row="1" Background="#425C5A" CornerRadius="0,0,30,30"></Border>
+                    <Border Grid.Row="0" Background="#067FF8" CornerRadius="30,30,0,0"></Border>
+                    <Border Grid.Row="1" CornerRadius="0,0,30,30">
+                        <Border.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#067FF8"/>
+                                <GradientStop Color="#FF3654F1" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Border.Background>
+                    </Border>
 
 
                     <Grid Grid.Row="0" Margin="25">
 
                         <Image Source="{StaticResource User}" Stretch="Uniform" 
-                               VerticalAlignment="Top" Width="140"/>
+                               VerticalAlignment="Top"
+                               Width="140"
+                               Margin="0,0,0,20"
+                               />
 
                         <StackPanel VerticalAlignment="Bottom" HorizontalAlignment="Center">
                             <TextBlock Text="NGUYỄN VĂN A"
-                                       FontSize="14"
+                                       FontSize="20"
                                        Foreground="White"
                                        VerticalAlignment="Bottom"
                                        HorizontalAlignment="Center"/>
                             <TextBlock Text="nguyenvana@gmail.com"
-                                       Margin="0,2.5,0,0"
-                                       FontSize="8.5"
+                                       Margin="0,0,0,-15"
+                                       FontSize="12"
                                        Foreground="White"
                                        VerticalAlignment="Bottom"
                                        HorizontalAlignment="Center"/>
@@ -60,15 +70,15 @@
 
                     </Grid>
                 </Grid>
-                
-                
+
+
                 <Grid Grid.Column="1">
                     <ContentControl x:Name="Pages"
                                     Content="{Binding Navigation.CurrentView}"></ContentControl>
                 </Grid>
 
             </Grid>
-        
+
         </Border>
 
 
