--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -66,7 +66,7 @@
 
                     </Grid>
                     <Grid Grid.Row="1">
-                        <uc:SidePanel Margin="0,30,0,0" HorizontalAlignment="Left"></uc:SidePanel>
+                        <uc:SidePanel Margin="0,30,0,0" HorizontalAlignment="Left"/>
 
                     </Grid>
                 </Grid>
