--- a/Martify/Views/SidePanel.xaml
+++ b/Martify/Views/SidePanel.xaml
@@ -61,8 +61,11 @@
                                             CornerRadius="0,10,10,0"
                                             HorizontalAlignment="Left"
                                             VerticalAlignment="Center"
-                                            Margin="0,0,0,0"
-                                            />
+                                            Margin="0,0,0,0">
+                                        <Border.Effect>
+                                            <DropShadowEffect Color="#80000000" BlurRadius="5" ShadowDepth="1" Direction="270" Opacity="0.2"/>
+                                        </Border.Effect>
+                                    </Border>
                                     
 
                                     <TextBlock x:Name="UpperCase_Text"
@@ -454,7 +457,8 @@
                                 <RowDefinition Height="40" />
                                 <RowDefinition Height="40" />
                                 <RowDefinition Height="40" />
-                                <RowDefinition Height="40" />
+                                <RowDefinition Height="40
+                                               " />
 
                             </Grid.RowDefinitions>
 
@@ -482,6 +486,7 @@
                              Style="{StaticResource receipts_listboxitem_style}" />
 
                 <ListBoxItem x:Name="settings_sidepanel_listboxitem"
+                             VerticalAlignment="Bottom"
                              Grid.Row="4"
                              Style="{StaticResource settings_listboxitem_style}" />
             </ListBox>
