--- a/Martify/Views/Dashboard.xaml
+++ b/Martify/Views/Dashboard.xaml
@@ -7,7 +7,8 @@
              xmlns:vm="clr-namespace:Martify.ViewModels"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="864"
-             Style="{StaticResource Page_RadarReveal_Style}">
+             Style="{StaticResource Page_RadarReveal_Style}"
+             d:Style="{x:Null}">
 
     <UserControl.DataContext>
         <vm:DashboardVM />
@@ -26,8 +27,8 @@
                     </Border>
                 </Grid>
 
-                <Grid Width="400" Height="200"
-                      Margin="50,55,0,0"
+                <Grid Width="500" Height="251"
+                      Margin="25,25,0,0"
                       VerticalAlignment="Top"
                       HorizontalAlignment="Left">
                     <Border Background="White"
@@ -36,17 +37,14 @@
                     </Border>
                 </Grid>
 
-                <Grid Width="300" Height="400"
-                      Margin="0,25,25,0"
-                      VerticalAlignment="Top"
-                      HorizontalAlignment="Right">
+                <Grid Width="300" Height="670"
+                      Margin="539,0,0,0"
+                      VerticalAlignment="Center"
+                      HorizontalAlignment="Left">
                     <Border Background="White"
-                            CornerRadius="20">
-
-                    </Border>
+                            CornerRadius="20"/>
                 </Grid>
             </Grid>
         </Grid>
-
     </Grid>
 </UserControl>
