--- a/Martify/Views/WindowControl.xaml
+++ b/Martify/Views/WindowControl.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:Martify.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
@@ -28,10 +29,29 @@
         </Style>
     </UserControl.Resources>
 
+    
+    
     <Grid>
+        <Grid x:Name="Dragging_Zone" 
+              Background="Transparent"
+              Height="40"
+              VerticalAlignment="Top">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseLeftButtonDown">
+                        <i:InvokeCommandAction Command="{Binding DragWindowCommand}"
+                                       CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" />
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                <!-- Optional: Add title or icon here -->
+        </Grid>
+        
         <StackPanel HorizontalAlignment="Right"
-                                VerticalAlignment="Top"
-                                Margin="0,20,10,0" Orientation="Horizontal">
+                    VerticalAlignment="Top"
+                    Margin="0,20,10,0" Orientation="Horizontal">
+            <Button Content="-"
+                    Command="{Binding HideWindowCommand}"
+                    CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=UserControl}}" />
+
             <Button Background="Transparent" 
                     BorderBrush="Transparent" 
                     Foreground="Transparent"
