--- a/Martify/Resources/XAML/ViewRes.xaml
+++ b/Martify/Resources/XAML/ViewRes.xaml
@@ -15,13 +15,15 @@
         <view:Products />
     </DataTemplate>
 
-    
-    
-    
-    
-    
-    
-    
-    
-    
+
+
+
+
+
+    <DataTemplate DataType="{x:Type vm:LoginErrorPopupVM}">
+        <view:LoginErrorPopup />
+    </DataTemplate>
+
+
+
 </ResourceDictionary>
