--- a/Martify/Resources/XAML/ImageRes.xaml
+++ b/Martify/Resources/XAML/ImageRes.xaml
@@ -5,7 +5,7 @@
     <BitmapImage x:Key="CloseProgram" UriSource="/Resources/Images/close_program.png" />
     
     <BitmapImage x:Key="Martify" UriSource="/Resources/Images/Martify.png" />
-    <BitmapImage x:Key="User" UriSource="/Resources/Images/user.png" />
+    <BitmapImage x:Key="Anonymous" UriSource="/Resources/Images/anonymous.png" />
     
     <BitmapImage x:Key="LoginBackground" UriSource="/Resources/Images/background.png" />
 
