--- a/Martify/Views/Employee.xaml
+++ b/Martify/Views/Employee.xaml
@@ -26,9 +26,18 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="1.5*"/>
         </Grid.RowDefinitions>
+
+
+        <Grid Grid.Row="0">
+            <Button Content="Thêm nhân viên" 
+                    Style="{DynamicResource PrimaryButtonStyle}" 
+                    Command="{Binding AddEmployeeCommand}"
+                    Width="150" Height="40" 
+                    HorizontalAlignment="Right" 
+                    Margin="0,0,25,0"/>
+        </Grid>
         
-        
-        <DataGrid Grid.Row="1"
+        <DataGrid Grid.Row="1" Margin="25,0,25,0"
                   ItemsSource="{Binding Employees}" 
                   RowStyle="{DynamicResource DataGridRowStyle}" 
                   ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle}" 
